--- a/assets/style.css
+++ b/assets/style.css
@@ -1,109 +1,128 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
 
 body {
-    font-family: "Open Sans", sans-serif;
-    font-weight: 300;
-    color: #a3a7b0;
-    background-color: #23272c;
-    margin: 0;
-    padding: 0;
-}
-
-hr {
-    height: 1px;
-    background-color: rgba(255, 255, 255, 0.20);
-    border: 0;
-    margin: 0 0 6% 0;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  color: #262626;
+  background-color: #81edf7;
+  padding: 0;
 }
 
 h3 {
-    font-family: "Open Sans", sans-serif;
-    font-weight: 400;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+}
+
+.caption {
+  font-weight: 400;
+}
+
+#graphing-container {
+  padding: 1rem;
+  background-color: #b3d9ff;
+  padding: 1rem;
+  border-radius: 4px;
+  border-width: thin;
+  border-style: solid;
+  display: grid;
+  place-items: center;
+}
+
+.non-dropdown {
+  margin: 1rem 0 1rem 0;
 }
 
 #header {
-    max-width: 100%;
-    padding: 1rem 10rem;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
+  max-width: 100%;
+  padding: 1rem 10rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-#logo {
-    width: 150px;
-    height: 30px;
-    padding-left: 60px;
+#_dash-app-content {
+  margin: 2rem;
+}
+
+#data-upload {
+  font-weight: 700;
 }
 
 @media only screen and (max-width: 800px) {
-    #header {
-        max-width: 100%;
-        padding: 4rem 5rem 2rem 5rem;
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
-        justify-content: space-evenly;
-    }
+  #header {
+    max-width: 100%;
+    padding: 4rem 5rem 2rem 5rem;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: space-evenly;
+  }
 
-    #logo {
-        margin-bottom: 1rem;
-        padding-left: 0px;
-    }
+  #logo {
+    margin-bottom: 1rem;
+    padding-left: 0px;
+  }
 
-    #header h3 {
-        text-align: center;
-        font-size: 2rem;
-        max-width: none;
-    }
+  #header h3 {
+    text-align: center;
+    font-size: 2rem;
+    max-width: none;
+  }
 
-    #header-1, #header-2{
-        font-size: 1.5rem;
-    }
+  #header-1,
+  #header-2 {
+    font-size: 1.5rem;
+  }
 
-    #header-1 {
-        text-align: center;
-    }
+  #header-1 {
+    text-align: center;
+  }
 
-    #header-2 {
-        margin-top: 3rem !important;
-        text-align: center;
-    }
+  #header-2 {
+    margin-top: 3rem !important;
+    text-align: center;
+  }
 
-    #header-2-p {
-        margin: 0;
-    }
+  #header-2-p {
+    margin: 0;
+  }
 
-    #graph-2>div {
-        margin-bottom: 40px;
-    }
-
-}
-
-
-p, #header-2 {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 2rem !important;
-    margin: 0 11%;
-}
-
-#graph-1, #graph-2 {
-    margin: 0 7% 5% 7%;
-}
-
-
-#header-2-strong {
-    font-family: "Open Sans", sans-serif !important;
-    font-weight: 600 !important;
-    color: #75baf2 !important;
+  #graph-2 > div {
+    margin-bottom: 40px;
+  }
 }
 
 #header-2-p {
-    margin: 0 0 0 0.5rem;
-    padding: 0;
+  margin: 0 0 0 0.5rem;
+  padding: 0;
 }
 
 ._dash-undo-redo {
-    display: none;
+  display: none;
 }
 
+body {
+  background-color: #e8f0f9 !important;
+  color: #5b5b5b !important;
+}
+
+body ::-webkit-scrollbar {
+  background-color: #e8f0f9 !important;
+}
+
+body ::-webkit-scrollbar-thumb {
+  background-color: #76d5ff;
+}
+
+wrapper {
+  display: inline-block !important;
+  padding: 0px;
+  margin-top: 101px;
+  margin-left: 130px !important;
+}
+
+control-tabs .tab--selected {
+  border-color: #76d5ff !important;
+  color: #76d5ff !important;
+}
